# ai-chatbot

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  vite.config.js
backend/: .env.example  Dockerfile  __init__.py  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  edges.py  graph.py  state.py
backend/app/agent/nodes/: __init__.py  executor.py  planner.py  responder.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  health.py  history.py
backend/app/db/: session.py
backend/app/db/migrations/: README.md
backend/app/memory/: __init__.py  long_term.py  short_term.py
backend/app/models/: chat.py  history.py
backend/app/tools/: calculator.py  file_reader.py  registry.py  web_search.py
backend/app/utils/: helpers.py  logger.py
backend/tests/: test_agent.py  test_routes.py  test_tools.py
database/: chatbot.db  chatbot.db-shm  chatbot.db-wal
src/: App.jsx  index.html
